반응형 css / sort부분 없애기

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1008,7 +1008,7 @@ NftCard
     }
 
     .no-display {
-        position: absolute;
+        /* position: absolute; */
         transform: translate(3.4375rem, 19.0625rem);
     }
 
