글자 위치 변경

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1009,7 +1009,17 @@ NftCard
 
     .no-display {
         /* position: absolute; */
-        transform: translate(3.4375rem, 19.0625rem);
+        /* transform: translate(3.4375rem, 19.0625rem); */
+        /* 좌우로 정렬 */
+        display: flex;
+        /* 밑으로 버튼 내리기 */
+        flex-direction: column;
+        /*  위 아래 정렬*/
+        justify-content: center;
+        /* 왼쪽 오른쪽 정렬 */
+        align-items: center;
+        margin: auto;
+        height: 70vh;
     }
 
 
