FEAT: vote Image

--- a/front/src/scss/detailCollecion.css
+++ b/front/src/scss/detailCollecion.css
@@ -270,7 +270,7 @@ body {
     position: relative;
     /* display: grid; */
     /* top: 70%; */
-    left: -20%;
+    left: 10%;
     width: 50px;
     height: 50px;
     margin-left: 20px;
@@ -279,13 +279,29 @@ body {
     background-color: lightblue;
     z-index: 2;
 }
+.arrowDetailLeft1{
+  transform: translate(-18px, 70px);
+  width: 30px;
+  height: 30px;
+  background-color: lightblue;
+  z-index: 2;
+}
 .arrowDetailRight{
+    position: relative;
+    left: 20%;
     width: 50px;
     height: 50px;
     margin-left: 20px;
     border: 1px solid black;
     background-color: lightblue;
     align-items: flex-end;
+}
+.arrowDetailRight1{
+  transform: translate(380px, 70px);
+  width: 30px;
+  height: 30px;
+  border: 1px solid black;
+  background-color: lightblue;
 }
 
 .modal_content_postion{
@@ -328,10 +344,8 @@ body {
     left: 78%;
 }
 
-
-
 .button {
-    position: relative;
+    position: absolute;
     display:block;
     height: 45px;
     /* padding: 5px 5px; */
@@ -345,11 +359,11 @@ body {
     overflow:hidden;
     z-index: 1;
     cursor: pointer;
-    transition:         0.08s ease-in;
+    /* transition:         0.08s ease-in;
     -o-transition:      0.08s ease-in;
     -ms-transition:     0.08s ease-in;
     -moz-transition:    0.08s ease-in;
-    -webkit-transition: 0.08s ease-in;
+    -webkit-transition: 0.08s ease-in; */
   }
   
   .fill:hover {
