--- a/front/src/App.css
+++ b/front/src/App.css
@@ -20,7 +20,7 @@ body {
 .wrapper {
   /* height: auto; */
   position: relative;
-  min-height: 78vh;
+  min-height: calc(100% - 20px);
   /* position: absolute; */
   /* margin-top: 10%; */
   /* background: red; */
@@ -243,7 +243,8 @@ body {
 
 /* MintCard */
 .MintCard {
-  padding-top: 5%;
+  /* background: blue; */
+  padding: 3.5% 0%;
   /* margin-top: 5%; */
   /* display: grid;
   grid-template-columns: repeat(2, 1fr);
