--- a/front/src/scss/detailCollecion.css
+++ b/front/src/scss/detailCollecion.css
@@ -289,6 +289,16 @@ body {
   background-color: lightblue;
   z-index: 2;
 }
+.arrowDetailLeft2{
+  transform: translate(-120px, 0);
+  position: absolute;
+  width: 20px;
+  height: 30px;
+  background-color: lightblue;
+  z-index: 2;
+  border: none;
+}
+
 .arrowDetailRight{
     position: relative;
     left: 20%;
@@ -305,6 +315,14 @@ body {
   height: 30px;
   border: 1px solid black;
   background-color: lightblue;
+}
+.arrowDetailRight2{
+  transform: translate(120px, 0);
+  position: absolute;
+  width: 20px;
+  height: 30px;
+  background-color: lightblue;
+  border: none;
 }
 
 .modal_content_postion{
