--- a/front/src/App.css
+++ b/front/src/App.css
@@ -309,7 +309,7 @@ body {
 
   .mint-title-box{
     margin-top: 10px;
-    border-bottom: 3px solid black;
+    /* border-bottom: 3px solid black; */
     /* margin-bottom: 20px; */
     /* height: 43px; */
   }
@@ -340,6 +340,7 @@ body {
 
 .mint-title {
   font-weight: 700;
+  color: rgba(125, 48, 4, 0.895);
 }
 
 .whitelist {
@@ -383,7 +384,7 @@ body {
 }
 .mint-title-box {
   margin-top: 20px;
-  border-bottom: 3px solid black;
+  /* border-bottom: 3px solid black; */
   margin-bottom: 20px;
   height: 43px;
 }
@@ -512,6 +513,9 @@ body {
 }
 
 /*swap*/
+.header-klay {
+  transform: translate(-5px, 0);
+}
 .swap-amount-input:before {
   content: '123';
 }
@@ -538,7 +542,7 @@ body {
   padding: 10px 8px 10px 6px;
   background-color: white;
   border-radius: 30px;
-  z-index: 2;
+  z-index: 1;
   box-shadow: rgb(193, 192, 192) 7px 7px;
 }
 
@@ -589,6 +593,7 @@ body {
 .swap-box {
   display: flex;
   justify-content: center;
+  /* z-index: 1; */
 }
 
 .swap-button {
@@ -665,7 +670,7 @@ body {
 }
 
 .swap-text-box {
-  margin-bottom: 2px;
+  margin-bottom: 10px;
 }
 
 .swap-user-token-outer {
@@ -698,17 +703,19 @@ body {
 .mywal-info {
   padding: 2px 5px;
   border-radius: 20px;
+  background: rgb(240, 228, 228);
+  padding: 0 20px; 
 }
 
 .mywal-header {
   font-size: 20px;
-  background-color: lightblue;
+  /* background-color: lightblue; */
   border-radius: 20px;
   margin-bottom: 5px;
 }
 
 .mywal-bal {
-  font-size: 18px;
+  font-size: 15px;
   margin-bottom: 2px;
 }
 
@@ -780,8 +787,10 @@ NftCard
   margin: auto;
   width: 60%;
   background-color: white;
+  /* border: 2px thick double black; */
+  /* background-color: rgb(196, 221, 249); */
   padding: 35px 0px;
-  border-radius: 20px;
+  border-radius: 60px;
 }
 .stake-box {
   width: 100%;
@@ -791,7 +800,7 @@ NftCard
 
 .stake-outer-box {
   display: flex;
-  opacity: 0.9;
+  /* opacity: 0.9; */
   width: 100%;
   height: 90%;
 }
@@ -812,6 +821,10 @@ NftCard
   font-size: 40px;
 }
 
+.nft-none {
+  margin-bottom: 53px;
+}
+
 .reward-box {
   position: relative;
   right: 0;
@@ -826,6 +839,12 @@ NftCard
 .reward-button {
   margin-left: 2%;
   font-size: 18px;
+  padding: 2px 10px;
+  /* font-weight: bold; */
+  /* border: 1px solid black; */
+  border-radius: 10px;
+  border: none;
+  background-color: coral;
 }
 
     .Main {
@@ -1184,6 +1203,7 @@ NftCard
 
 .collection-info-box {
   font-size: 18px;
+  font-weight: bold;
   text-align: end;
   width: 200px;
   margin-right: 50px;
@@ -1257,7 +1277,6 @@ th {
   border-bottom: 1px solid black;
   font-size: 20px;
 }
-
 
 /*AlertModal*/
 .alert-modal {
