--- a/front/src/scss/detailCollecion.css
+++ b/front/src/scss/detailCollecion.css
@@ -28,20 +28,24 @@ body {
 .detailImglNft-item1 {
     height: 80vh;
     /* width: 70%; */
-    /* background-color: lavender; */
+    background-color: lavender;
     height: 100%;
-    display: grid;
-    grid-template-rows: 900px 1fr;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* grid-template-rows: 900px 1fr; */
+    /* text-align: center; */
 }
 
 .detailImglNft-mainImg{
-    /* background-color: red */
+    background-color: red;
+    display: flex;
+    justify-content: center;
 }
 
-.detailImglNft-mainImg img{
-    width: 100%;
-    height: 100%;
+.detailImglNft-item1 img{
+    width: 85%;
+    height: 85%;
 }
 
 .detailImglNft-subImg{
@@ -63,20 +67,24 @@ body {
 
 .detailImglNft-item2  {
     height: 70vh;
+    display: flex;
+    flex-direction: column;
     /* background-color: pink; */
-    display: grid;
-    grid-template-rows: 400px 2fr 500px;
-    gap : 30px;
+    /* display: grid; */
+    /* grid-template-rows: 400px 2fr 500px; */
+    /* gap : 30px; */
 
 }
 
 .detailImglNft-description_1{
     width: 100%;
-    height: 15rem;
+    height: 5rem;
+    /* height: 5rem; */
     /* background-color: lawngreen; */
 }
 
 .detailImglNft-description_2{
+    margin-top: 30%;
     width: 100%;
     height: 25rem;
     /* background-color: firebrick; */
@@ -85,8 +93,11 @@ body {
 }
 
 .detailTitle {
-    color: lightskyblue;
-    font-size: 3em;
+    color: rgba(125, 48, 4, 0.895);
+    font-size: 2.5em;
+    margin: 0 10px;
+    font-weight: bold;
+    /* background-color: #04befe; */
 }
 
 .detail_OwnedBy{
@@ -107,12 +118,21 @@ body {
     border-top: 1px solid lightgray;
     margin: 10px;
 }
+.left-layoutP {
+  /* margin-top: 6px; */
+  text-align: center;
+  /* border-right: 1px solid lightgray; */
+  padding-right: 30px;
+}
 
 .div-section-two {
-  display: grid;
-  grid-template-columns: 1fr 1fr ;
-  margin-top: 50px;
-
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* display: grid; */
+  /* grid-template-columns: 1fr 1fr ; */
+  /* margin-top: 50px; */
+  /* background-color: red; */
 }
 
 .right-layout {
@@ -232,8 +252,8 @@ body {
   .but {
     color: var(--color);
     transition: 0.25s;
-    position: fixed;
-    top: 80%;
+    position: absolute;
+    top: 83%;
     right: 12%;
   }
   .but:hover, .but:focus {
@@ -328,6 +348,7 @@ body {
 .modal_content_postion{
     display: flex;
     text-align: center;
+    padding-top: 7%;
     /* align-items: center; */
 }
 
@@ -338,31 +359,55 @@ body {
 
 .absLL{
     position: absolute;
-    top: 120px;
-    left: -15%;
+    top: 156px;
+    left: -6.3%;
 }
 
 .absLeft {
     position: absolute;
-    top: 120px;
-    left: -16%;
+    top: 156px;
+    left: -2%;
     /* background-color: black; */
 }
+.modal-collection-box {
+  display: flex;
+  justify-content: center;
+  /* background-color: cadetblue; */
+  flex-direction: column;
+  /* width: 190px; */
+}
+.modal-collection-img {
+  margin: auto;
+  cursor: pointer;
+  width: 190px;
+  border-radius: 10%;
+}
+.modal-collection-img:hover {
+  width: 205px;
+}
+.modal-collection-detail {
+  text-align: center;
+  background-color: #04befe;
+  width: 100px;
+  margin: auto;
+  border-radius: 10px;
+}
+
 .addf1{
   /* width: 100; */
 }
 
 .absRight {
     position: absolute;
-    top: 120px;
-    left: 79%;
+    top: 156px;
+    left: 94%;
     /* background-color: black; */
 }
 
 .absRR {
     position: absolute;
-    top: 120px;
-    left: 78%;
+    top: 156px;
+    left: 98.3%;
 }
 
 .button {
