--- a/front/src/scss/detailCollecion.css
+++ b/front/src/scss/detailCollecion.css
@@ -95,7 +95,7 @@ body {
 .detailTitle {
     color: rgba(125, 48, 4, 0.895);
     font-size: 2.5em;
-    margin: 0 10px;
+    margin: 0 33px;
     font-weight: bold;
     /* background-color: #04befe; */
 }
@@ -126,9 +126,11 @@ body {
 }
 
 .div-section-two {
+  /* margin-left: 20px; */
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   align-items: center;
+  justify-content: center;
   /* display: grid; */
   /* grid-template-columns: 1fr 1fr ; */
   /* margin-top: 50px; */
